# stank-scanner

./: .dockerignore  .gitignore  AGENTS.md  README.md  StankBot.plugin.js  StankScanner.plugin.js  pyproject.toml  railway.json
.claude/commands/: revert.md
.opencode/commands/: commit-and-push.md  triage.md  update-docs.md
deploy/docker/: Dockerfile  entrypoint.sh
deploy/systemd/: stankbot.service
migrations/versions/: 20260421_0006_0007_team_player_achievement.py  20260426_add_session_chain_counters.py  20260426_fix_admin_users_added_at_tz.py  20260430_add_media_slug.py  20260430_add_media_tables.py  20260502_2036_e7c979f86441_slug_unique_per_media_type.py  20260502_2257_d71b13e08cba_rename_slug_to_name.py  20260503_1935_3f927e7ca474_add_alignment_mask_to_metric_snapshots.py  20260503_2100_b4e1f9a2c7d3_add_alignment_mask_index.py  20260506_0000_add_media_milestones.py  20260507_0000_add_guild_members.py  20260510_0000_add_media_owners.py  20260511_0000_add_media_owner_milestones.py
scripts/: dev.ps1  dev.sh  run-e2e.mjs
src/stankbot/: __main__.py  bot.py  config.py  logging.py  logging_setup.py  rebuild.py
tests/: conftest.py
tests/unit/: test_achievements.py  test_announcement_service.py  test_board_pagination.py  test_board_service.py  test_chain_listener.py  test_chain_service.py  test_chains_repo.py  test_chart_cache_cleanup.py  test_chart_renderer.py  test_dashboard_urls.py  test_datetime_coercion.py  test_embed_builders.py  test_events_repo.py  test_media_api.py  test_media_metrics_scheduler.py  test_media_milestones.py  (+14 more)
web/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
(+284 files in other folders)
